; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/nodes/extr_makefuncs.c_make_and_qual.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/nodes/extr_makefuncs.c_make_and_qual.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @make_and_qual(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = load i32*, i32** %5, align 8
  store i32* %9, i32** %3, align 8
  br label %21

10:                                               ; preds = %2
  %11 = load i32*, i32** %5, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %10
  %14 = load i32*, i32** %4, align 8
  store i32* %14, i32** %3, align 8
  br label %21

15:                                               ; preds = %10
  %16 = load i32*, i32** %4, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @list_make2(i32* %16, i32* %17)
  %19 = call i64 @make_andclause(i32 %18)
  %20 = inttoptr i64 %19 to i32*
  store i32* %20, i32** %3, align 8
  br label %21

21:                                               ; preds = %15, %13, %8
  %22 = load i32*, i32** %3, align 8
  ret i32* %22
}

declare dso_local i64 @make_andclause(i32) #1

declare dso_local i32 @list_make2(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
